--- a/postgres13-queries.yaml
+++ b/postgres13-queries.yaml
@@ -171,7 +171,7 @@ pg_stat_statements_red:
         usage: "COUNTER"
         description: "total of time"
 pg_stat_statements:
-  query: "SELECT t2.rolname, t3.datname, queryid, query, round(total_exec_time::numeric, 2) AS total_time, calls, round(total_exec_time::numeric / calls, 2) AS avg_time, round(max_exec_time::numeric, 2) AS max_time, round((100 * total_exec_time / sum(total_exec_time::numeric) OVER ())::numeric, 2) AS percentage_cpu FROM pg_stat_statements t1 JOIN pg_roles t2 ON (t1.userid=t2.oid) JOIN pg_database t3 ON (t1.dbid=t3.oid) WHERE lower(substring(query, 1, 10)) not like 'copy%' AND lower(substring(query, 1, 10)) not like 'create%' AND lower(substring(query, 1, 10)) not like 'fetch%' ORDER BY percentage_cpu DESC LIMIT 20;"
+  query: "SELECT t2.rolname, t3.datname, queryid, query, round(total_exec_time::numeric, 2) AS total_time, calls, round(total_exec_time::numeric / calls, 2) AS avg_time, round(max_exec_time::numeric, 2) AS max_time, round((100 * total_exec_time / sum(total_exec_time::numeric) OVER ())::numeric, 2) AS percentage_cpu FROM pg_stat_statements t1 JOIN pg_roles t2 ON (t1.userid = t2.oid) JOIN pg_database t3 ON (t1.dbid = t3.oid) JOIN pg_auth_members t4 ON (t2.oid = t4.member) WHERE t4.roleid IN (SELECT oid FROM pg_roles WHERE rolname = 'apps') ORDER BY percentage_cpu DESC LIMIT 20;"
   master: true
   metrics:
     - rolname:
