--- a/postgres13-queries.yaml
+++ b/postgres13-queries.yaml
@@ -52,7 +52,7 @@ pg_idle_in_transaction_debug:
         usage: "COUNTER"
         description: "duration"
 pg_idle_in_transaction_terminated:
-  query: "SELECT pid, datname, usename, client_addr, query, floor(extract(epoch FROM (now() - query_start))) AS duration, pg_terminate_backend(pid) FROM pg_stat_activity WHERE (usename not like 'pgrep_user%' AND usename not like 'log_rep%' AND usename <> '' AND state = 'idle in transaction') AND ((usename like 'v-oidc-%' AND query_start < NOW() - INTERVAL '30 minutes') OR (usename not like 'v-oidc-%' AND query_start < NOW() - INTERVAL '10 minutes'));"
+  query: "SELECT pid, datname, usename, client_addr, query, floor(extract(epoch FROM (now() - query_start))) AS duration, pg_terminate_backend(pid) FROM pg_stat_activity WHERE (usename not like 'pgrep_user%' AND usename not like 'log_rep%' AND usename not like 'pglogical' AND usename <> '' AND state = 'idle in transaction') AND ((usename like 'v-oidc-%' AND query_start < NOW() - INTERVAL '30 minutes') OR (usename not like 'v-oidc-%' AND query_start < NOW() - INTERVAL '10 minutes'));"
   master: true
   metrics:
     - pid:
