--- a/postgres-datadog.yaml
+++ b/postgres-datadog.yaml
@@ -121,7 +121,7 @@ instances:
             type: gauge
 
       - metric_prefix: postgresql.pg_idle_in_transaction_debug
-        query: WITH q_locks AS (select * from pg_locks where pid != pg_backend_pid() and database = (select oid from pg_database where datname = current_database())) SELECT (select current_database()) as datname, lockmodes AS lock_mode, coalesce((select count(*) FROM q_locks WHERE mode = lockmodes), 0) AS lock_count FROM unnest('{AccessShareLock, ExclusiveLock, RowShareLock, RowExclusiveLock, ShareLock, ShareRowExclusiveLock, AccessExclusiveLock, ShareUpdateExclusiveLock}'::text[]) lockmodes
+        query: SELECT pid, datname, usename, client_addr, query, wait_event, floor(extract(epoch FROM (now() - query_start))) AS duration FROM pg_stat_activity WHERE state = 'idle in transaction' AND (now() - query_start) > '10 minutes'::interval;
         columns:
           - name: pid
             type: tag
