update postgres-datadog conf

--- a/postgres-datadog.yaml
+++ b/postgres-datadog.yaml
@@ -16,6 +16,7 @@ instances:
       - relation_regex: '.*'
         relkind:
         - r
+    max_relations: 300
     
     collect_count_metrics: true
     collect_activity_metrics: true
